libs/extractor/src/snapshots/extractor__tests__props_direct_variable_array_responsive_select-2.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {Flex} from '@devup-ui/core'\n;<Flex gap={[, [d, e, f]][idx]} />\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 0,
                identifier: "d",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 1,
                identifier: "e",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 2,
                identifier: "f",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment48) => <div className={`OLdisplay-vflex-o0 ${__devupAssignment48?.[0] ?? \"\"}`} style={{ ...__devupAssignment48?.[1] }} />)([, ((__devupLevel0, __devupLevel1, __devupLevel2) => [\n\t`${__devupLevel0?.[0] ?? \"\"} ${__devupLevel1?.[0] ?? \"\"} ${__devupLevel2?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupLevel0?.[1],\n\t\t...__devupLevel1?.[1],\n\t\t...__devupLevel2?.[1]\n\t},\n\t[\n\t\t__devupLevel0?.[2],\n\t\t__devupLevel1?.[2],\n\t\t__devupLevel2?.[2]\n\t]\n])(((__devupValue) => [\n\t\"OHb52t7iiq3lluwm94\",\n\t{ \"---SUHdlutj7d8vkq_lvnb-av\": __devupValue },\n\t__devupValue\n])(d), ((__devupValue) => [\n\t\"OHab0qd8ysyf7xfqc3\",\n\t{ \"---SUHdlutj7d8vkq_lvnb-av-b\": __devupValue },\n\t__devupValue\n])(e), ((__devupValue) => [\n\t\"OHblp7sam6zmoo997r\",\n\t{ \"---SUHdlutj7d8vkq_lvnb-av-c\": __devupValue },\n\t__devupValue\n])(f))][idx]);\n",
}
