libs/extractor/src/snapshots/extractor__tests__props_direct_wrong.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {Flex} from '@devup-ui/core'\n;<Flex gap={true[1]} />\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 0,
                identifier: "true[1]",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"OLdisplay-vflex-o0 OHbpkal747kann4h7n\" style={{ \"---SUimport_s_x7b__x46_lex_x7d__sfrom_s_x27__x40_devup_dui_lcore_x27__xa__x3b__x3c__x46_lex_sgap_x3d__x7b_true_x5b_1_x5d__x7d__s_l_x3e__xa__s_s_s_s_s_s_s_s-av\": true[1] }} />;\n",
}
