libs/extractor/src/snapshots/extractor__tests__props_multi_expression.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {\n  Box,\n  Button as DevupButton,\n  Center,\n  css,\n} from '@devup-ui/core'\n\n<DevupButton\n    border={\n    {\n        primary: 'none',\n        default: '1px solid var(--border, #E4E4E4)',\n    }[variant]\n    }\n    className={className}\n    px={\n    {\n        false: { sm: '12px', md: '16px', lg: '20px' }[size],\n        true: { sm: '24px', md: '28px', lg: '32px' }[size],\n    }[(!!icon).toString()]\n    }\n/>\n\",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "border",
                value: "1px solid var(--border,#E4E4E4)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "border",
                value: "none",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "12px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "20px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "24px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "28px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-left",
                value: "32px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "12px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "16px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "20px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "24px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "28px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding-right",
                value: "32px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment113, __devupClass229, __devupAssignment253) => <button className={`${__devupClass229 || \"\"} ${__devupAssignment113?.[0] ?? \"\"} ${__devupAssignment253?.[0] ?? \"\"}`} style={{\n\t...__devupAssignment113?.[1],\n\t...__devupAssignment253?.[1]\n}} />)({\n\tprimary: ((__devupValue) => [\n\t\t\"OLborder-vnone\",\n\t\t{},\n\t\t__devupValue\n\t])(\"none\"),\n\tdefault: ((__devupValue) => [\n\t\t\"OHdj8hkxyw6gnog9o7\",\n\t\t{},\n\t\t__devupValue\n\t])(\"1px solid var(--border, #E4E4E4)\")\n}[variant], className, {\n\tfalse: {\n\t\tsm: ((__devupValue) => [\n\t\t\t\"OHa8r03kgrf2jimx47 OHas644fk71k3hds97\",\n\t\t\t{},\n\t\t\t__devupValue\n\t\t])(\"12px\"),\n\t\tmd: ((__devupValue) => [\n\t\t\t\"OHc7xuepkvwu3p6o_g OHak_2pioc5rob4duv\",\n\t\t\t{},\n\t\t\t__devupValue\n\t\t])(\"16px\"),\n\t\tlg: ((__devupValue) => [\n\t\t\t\"OHcodvmf2cqba_rdgf OHb7w1wzykttkhhfj5\",\n\t\t\t{},\n\t\t\t__devupValue\n\t\t])(\"20px\")\n\t}[size],\n\ttrue: {\n\t\tsm: ((__devupValue) => [\n\t\t\t\"OHamtsog4ytuyif6nt OHc5vimv4rry6d5aow\",\n\t\t\t{},\n\t\t\t__devupValue\n\t\t])(\"24px\"),\n\t\tmd: ((__devupValue) => [\n\t\t\t\"OHciv06c8tmecv9nyk OHb8c9reowobsa15ep\",\n\t\t\t{},\n\t\t\t__devupValue\n\t\t])(\"28px\"),\n\t\tlg: ((__devupValue) => [\n\t\t\t\"OHdlipjzjfzit2qjmk OHdlbv5twpstmp8ntc\",\n\t\t\t{},\n\t\t\t__devupValue\n\t\t])(\"32px\")\n\t}[size]\n}[(!!icon).toString()]);\n",
}
