libs/extractor/src/snapshots/extractor__tests__props_wrong_direct_array_select-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box padding={[1,,null][1]} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "4px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupChoice0) => <div className={{ \"0\": \"a\" }[__devupChoice0?.[\"0\"]] || \"\"} />)([\n\t[\"0\"],\n\t,\n\t[\"2\"]\n][1]);\n",
}
